# FastAPI_project

./: docker-compose.yml  pyproject.toml
fastapi-aplication/: main.py
fastapi-aplication/core/: config.py
fastapi-aplication/core/models/: __init__.py  db_helper.py
